6782574: AffineTransformOp.filter(BufferedImage, BufferedImage) fails with InternalError

Reviewed-by: igor, prr